--- a/views/index.pug
+++ b/views/index.pug
@@ -1,12 +1,21 @@
 h1 Validate against JSON Schema (prototype)
 h2 Upload/input a CSV file
 form(action="", method="post", enctype="multipart/form-data")
-	input(type="file", name="csv_file")
-	button(type='submit') Validate my file
+  input(type="file", name="csv_file")
+  p
+    label valid
+    input(type='radio', name='type', value='valid')
+  p
+    label invalid
+    input(type='radio', name='type', value='invalid')
+  p
+    label malformed
+    input(type='radio', name='type', value='malformed')
+  button(type='submit') Validate
 
 h2 Schema definition
 p Prepared with the
-	= ' '
-	a(href='https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/653657/BrownfieldLandRegisters_-_DataStandard.pdf') Brownfield Land Registers Data Standard
+  = ' '
+  a(href='https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/653657/BrownfieldLandRegisters_-_DataStandard.pdf') Brownfield Land Registers Data Standard
 
 pre(style='border:1px solid #ddd;padding:10px') #{schema}
